pkg/main/default/objects/Organization__mdt/Organization__mdt.object-meta.xml
<CustomObject>
    <label>DocuSign Organization Metadata</label>
    <pluralLabel>DocuSign Organization Metadata</pluralLabel>
</CustomObject>