pkg/main/default/objects/Organization__mdt/fields/ConnectedAppId__c.field-meta.xml
<CustomField>
	<fullName>ConnectedAppId__c</fullName>
	<label>Connected App ID</label>
	<length>255</length>
	<type>Text</type>
</CustomField>