pkg/main/default/objects/Organization__mdt/fields/ConnectedAppJwtSigningKey__c.field-meta.xml
<CustomField>
	<fullName>ConnectedAppJwtSigningKey__c</fullName>
	<label>Connected App JWT signing key</label>
	<length>2000</length>
	<type>LongTextArea</type>
</CustomField>