pkg/main/default/objects/Organization__mdt/fields/ConnectedAppSecret__c.field-meta.xml
<CustomField>
	<fullName>ConnectedAppSecret__c</fullName>
	<label>Connected App secret</label>
	<length>255</length>
	<type>Text</type>
</CustomField>