pkg/main/default/objects/Organization__mdt/fields/DistributorCode__c.field-meta.xml
<CustomField>
    <fullName>DistributorCode__c</fullName>
    <label>Distributor Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>