pkg/main/default/objects/Organization__mdt/fields/DistributorPassword__c.field-meta.xml
<CustomField>
    <fullName>DistributorPassword__c</fullName>
    <label>Distributor Password</label>
    <length>200</length>
    <type>Text</type>
</CustomField>