pkg/main/default/objects/Organization__mdt/fields/IntegratorKey__c.field-meta.xml
<CustomField>
    <fullName>IntegratorKey__c</fullName>
    <label>Integrator Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>