pkg/main/default/objects/Organization__mdt/fields/JwtPrivateKey__c.field-meta.xml
<CustomField>
    <fullName>JwtPrivateKey__c</fullName>
    <label>JWT Private RSA Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>