pkg/main/default/objects/Organization__mdt/fields/JwtPublicKey__c.field-meta.xml
<CustomField>
    <fullName>JwtPublicKey__c</fullName>
    <label>JWT Public RSA Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>