pkg/main/default/objects/Organization__mdt/fields/NotificationEmail__c.field-meta.xml
<CustomField>
    <fullName>NotificationEmail__c</fullName>
    <label>Notification Email Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>