pkg/main/default/objects/Organization__mdt/fields/RsaPrivateKey__c.field-meta.xml
<CustomField>
	<fullName>RsaPrivateKey__c</fullName>
	<label>JWT signature key</label>
	<length>32768</length>
	<type>LongTextArea</type>
</CustomField>