pkg/main/default/objects/Organization__mdt/fields/SoapClientId__c.field-meta.xml
<CustomField>
	<fullName>SoapClientId__c</fullName>
	<label>SOAP Client ID</label>
	<length>100</length>
	<type>Text</type>
</CustomField>